--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="utf8">
 		<title>Pac-Man . Pac-Man game</title>
 		<meta name="description" content="Pac-Man is a classic arcade game in the 1980s. The image of the protagonist of the game is even used as a symbol of popular culture. This game uses HTML5 to perfectly transplant the game, set multiple levels and improve the ghost pathfinding algorithm, which can be used as a case demonstration of Canvas game learning.">
-		<meta name="keywords" content="Pac-Man, FC Pacman, Pac-Man, Pac-Man, HTML5 Game, Javascript Game Engine, pacman">
+		<meta name="keywords" content="Pac-Man, FC Pacman, Pac-Man, Pac-Man, HTML5 Game, Javascript Game Engine, pacmann">
 		<link rel="shortcut icon" href="favicon.png">
 		<style>
 			*{padding:0;margin:0;}
