--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="wrapper">
 			<canvas id="canvas" width="960" height="640">不支持画布</canvas>
 			<div class="info">Press [Space] to pause or continue.</div>
-			<p>I made this Pac-Man game to explore html and javascript.</p>
+			<p>I made this Pac-Man game to explore html and javascript..</p>
 			<div class="mod-botton">
 				<a class="github-button" href="https://github.com/FuckingBL4CK" data-style="mega" data-count-href="/FuckingBL4CK/followers" data-count-api="/users/FuckingBL4CK#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @FuckingBL4CK on GitHub">Follow @FuckingBL4CK</a>
 				<a class="github-button" href="https://github.com/FuckingBL4CK/pacman" data-style="mega" data-count-href="/FuckingBL4CK/pacman/stargazers" data-count-api="/repos/FuckingBL4CK/pacman#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star FuckingBL4CK/pacman on GitHub">Star</a>
